# consensus-model-checking

./: .gitignore  README.md  model_check.py  pyproject.toml  requirements.txt  simulate.py
experiments/: exact_sweep.py  grid_common.py  model_check_grid.py  plot_exact_results.py  plot_model_check_results.py  smc.py  smc_h_sweep.py  smc_sweep.py  validate.py  validate_sim_direct.py  validate_sim_exact.py  validate_simulators.py
models/: crossinh_contrarians.prism  crossinh_zealots.prism  voter_contrarians.prism  voter_zealots.prism
properties/: consensus_prob.props  consensus_time.props
results/: exact_sweep.csv  model_check_grid.csv  smc_h_sweep.csv  smc_sweep.csv
src/: checking.py  cli.py  estimation.py  gillespie_py.py  gillespie_storm.py  model.py  monitors.py  plotting.py  types.py
tests/: test_conservation.py  test_model_building.py  test_online_monitor_equivalence.py
util/: cli_args.py  model_builder.py  plot_utils.py  simulation_types.py
visualization/: plot_smc_h_results.py  plot_smc_results.py
